test: Remove unnecessary tests and adjust terminology